# fye

./: .gitignore  Cargo.toml  flake.nix
client/: Cargo.toml
client/src/: filesystem.rs  lib.rs  local_file_cache.rs  main.rs  maybe_async.rs  remote_data_service.rs
client/src/filesystem/: reply.rs
client/src/remote_data_service/: error.rs  reqwest_postcard.rs
fye_client/: Cargo.toml
fye_client/src/: filesystem.rs  lib.rs  main.rs
fye_client/src/filesystem/: reply.rs
nix/: client.nix  common.nix  server.nix
server/: Cargo.toml  diesel.toml
server/dev_data/: fye.db
server/migrations/2024-10-04-033117_nodes/: down.sql  up.sql
server/migrations/2024-10-14-142618_file-hash/: down.sql  up.sql
server/src/: db.rs  error.rs  extractors.rs  hash.rs  main.rs  routes.rs  stream.rs  testing.rs
server/src/db/: schema.rs
server/src/extractors/: headers.rs
server/src/routes/: create.rs  delete.rs  files.rs  info.rs
server/src/routes/files/: upload_file.rs  write_lock.rs
shared/: Cargo.toml
shared/src/: lib.rs
