[workspace]
resolver = "2"
members = ["shared", "client", "server"]

[workspace.package]
version = "0.1.0-wip"
authors = ["David Wolff"]

[workspace.dependencies]
fye_shared = { path = "./shared", version = "0.1.0-wip" }
serde = { version = "1.0", features = ["derive"] }
http = "1.1"

[workspace.metadata.crane]
name = "fye"
