[package]
name = "fye_server"
version.workspace = true
authors.workspace = true
edition = "2021"

[[bin]]
name = "fye-server"
path = "src/main.rs"

[dependencies]
fye_shared.workspace = true
axum = { version = "0.7", default-features = false, features = ["http1", "http2", "tokio"] }
tokio = { version = "1.40", features = ["rt", "net", "macros", "rt-multi-thread"] }
axum-postcard = "0.2"
diesel = { version = "2.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
r2d2 = "0.8"
futures = "0.3"
bytes = "1.7"
pin-project = "1.1"
tokio-util = { version = "0.7", features = ["io"] }
blake3 = "1.5"
